# pg_replicate

./: Cargo.toml  FORK.md  README.md  docker-compose.yml
src/: table.rs
src/clients/: postgres.rs
src/conversions/: cdc_event.rs
tests/: mod.rs
tests/clients/: mod.rs  postgres.rs
tests/common/: mod.rs  postgres.rs  postgres_utils.rs
