[package]
name = "pg_replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bigdecimal = { version = "0.4.6", features = ["std"] }
bytes = "1.0"
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.0", optional = true, features = ["bundled"] }
deltalake = { version = "0.22.0", features = ["datafusion"], optional = true }
futures = "0.3.31"
gcp-bigquery-client = { version = "0.25.0", optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
pg_escape = "0.1.1"
pin-project-lite = "0.2"
prost = { version = "0.13.1", optional = true }
rustls = { version = "0.23.12", features = ["aws-lc-rs", "logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", default-features = true }
uuid = { version = "1.10.0", features = ["v4"] }
tokio-postgres = { git = "ssh://git@github.com/Mooncake-labs/rust-postgres.git", features = [
  "runtime",
  "with-chrono-0_4",
  "with-uuid-1",
  "with-serde_json-1",
]}
postgres-protocol = { git = "ssh://git@github.com/Mooncake-labs/rust-postgres.git" }
postgres-replication = { git = "ssh://git@github.com/Mooncake-labs/rust-postgres.git" }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = [
    "std",
    "derive",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }

[features]
stdout = []
# When enabled converts unknown types to bytes
unknown_types_to_bytes = []
default = ["unknown_types_to_bytes"]
